[project]
name = "protoface-sdk"
dynamic = ["version"]
description = "Official Python SDK for the Protoface API."
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "Protoface Team", email = "info@protoface.com" }]
keywords = ["protoface", "avatar", "api", "sdk"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.9",
]

[project.urls]
Homepage = "https://protoface.com"
Documentation = "https://docs.protoface.com"
Source = "https://github.com/protoface-ai/protoface-sdk-python"

[dependency-groups]
dev = [
  "build>=1.2",
  "datamodel-code-generator>=0.25",
  "pyright>=1.1.380",
  "pytest>=8.0",
  "ruff>=0.7.0",
  "twine>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/protoface_sdk"]

[tool.hatch.version]
path = "src/protoface_sdk/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src/protoface_sdk",
  "/tests",
  "/apispec",
  "/README.md",
  "/LICENSE",
  "/Makefile",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "W",
  "B",
  "UP",
  "RUF",
  "SIM",
  "PTH",
  "ARG",
]
ignore = [
  "E501",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.10"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportMissingImports = "error"
reportUntypedFunctionDecorator = "warning"
reportPrivateUsage = "warning"

[tool.pytest.ini_options]
testpaths = ["tests"]
